# mockingj

./: project-structure  pyproject.toml
docs/development/: UML.mermaid  adr.md
src/mockingj/core/: config.py  exceptions.py  logging.py
src/mockingj/models/: config.py  schema.py
tests/: conftest.py
tests/test_core/: test_config.py
tests/test_generators/: test_array_generator.py  test_mock_generator.py  test_number_generator.py  test_object_generator.py  test_string_generator.py
tests/test_models/: test_array_schema.py  test_config_models.py  test_object_schema.py  test_schema_models.py
tests/test_parser/: test_basic_parser.py  test_parameter_parser.py  test_path_parser.py  test_response_parser.py  test_schema_parser.py  test_swagger_parser.py
